{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 177,
  "lineage": "043e1d8e-fc10-404c-8fa5-e17fb6db9d04",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/nginx-service",
            "metadata": [
              {
                "generation": 0,
                "name": "nginx-service",
                "namespace": "default",
                "resource_version": "1301",
                "uid": "07f17a97-769d-4843-a006-7345c96dada2"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.14.27",
                "cluster_ips": [
                  "172.20.14.27"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30257,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "nginx"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a07f17a97769d4843a0067345c96dada-1715033164.us-east-1.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_eks_cluster.cluster",
            "module.eks.aws_eks_node_group.node_group",
            "module.iam.aws_iam_role.eks_role",
            "module.iam.aws_iam_role.node_role",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.infrastructure_vpc",
            "module.security.aws_security_group.security"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "infrastructure_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654340735:internet-gateway/igw-0c9fd5ffc834c16c1",
            "id": "igw-0c9fd5ffc834c16c1",
            "owner_id": "654654340735",
            "tags": {
              "Name": "Manoj-eks-gw"
            },
            "tags_all": {
              "Name": "Manoj-eks-gw"
            },
            "vpc_id": "vpc-09fb0d1f9066fd2d2"
          },
          "dependencies": [
            "module.network.aws_vpc.infrastructure_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654340735:route-table/rtb-018f51572bebf51e9",
            "id": "rtb-018f51572bebf51e9",
            "owner_id": "654654340735",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Manoj-eks-private-rt-1"
            },
            "tags_all": {
              "Name": "Manoj-eks-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fb0d1f9066fd2d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.infrastructure_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654340735:route-table/rtb-04fb55bec58db5cb7",
            "id": "rtb-04fb55bec58db5cb7",
            "owner_id": "654654340735",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Manoj-eks-private-rt-2"
            },
            "tags_all": {
              "Name": "Manoj-eks-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fb0d1f9066fd2d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654340735:route-table/rtb-07674ff483a0a6543",
            "id": "rtb-07674ff483a0a6543",
            "owner_id": "654654340735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c9fd5ffc834c16c1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Manoj-eks-public-rt-1"
            },
            "tags_all": {
              "Name": "Manoj-eks-public-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fb0d1f9066fd2d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.infrastructure_igw",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.infrastructure_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654340735:route-table/rtb-078ee7da72da2db1f",
            "id": "rtb-078ee7da72da2db1f",
            "owner_id": "654654340735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c9fd5ffc834c16c1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Manoj-eks-public-rt-2"
            },
            "tags_all": {
              "Name": "Manoj-eks-public-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fb0d1f9066fd2d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.infrastructure_igw",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.infrastructure_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654340735:route-table/rtb-0d619f55ff26c6d45",
            "id": "rtb-0d619f55ff26c6d45",
            "owner_id": "654654340735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c9fd5ffc834c16c1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Manoj-eks-public-rt-3"
            },
            "tags_all": {
              "Name": "Manoj-eks-public-rt-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fb0d1f9066fd2d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.infrastructure_igw",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0429058025cbca1c5",
            "route_table_id": "rtb-018f51572bebf51e9",
            "subnet_id": "subnet-0abdeed652a3ead4d"
          },
          "dependencies": [
            "module.network.aws_route_table.private_route",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.infrastructure_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dc4485e24d2c803",
            "route_table_id": "rtb-04fb55bec58db5cb7",
            "subnet_id": "subnet-06fc6b183d9683f81"
          },
          "dependencies": [
            "module.network.aws_route_table.private_route",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0174d43d7292825ce",
            "route_table_id": "rtb-07674ff483a0a6543",
            "subnet_id": "subnet-0460d1c82d18ec81b"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.infrastructure_igw",
            "module.network.aws_route_table.public_route",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.infrastructure_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e99ebec2d2e630d5",
            "route_table_id": "rtb-078ee7da72da2db1f",
            "subnet_id": "subnet-0c2486a1b7c053856"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.infrastructure_igw",
            "module.network.aws_route_table.public_route",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.infrastructure_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0903557866b1120f5",
            "route_table_id": "rtb-0d619f55ff26c6d45",
            "subnet_id": "subnet-0ada504b081101e19"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.infrastructure_igw",
            "module.network.aws_route_table.public_route",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654340735:subnet/subnet-0abdeed652a3ead4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abdeed652a3ead4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654340735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Manoj-eks-private-subnet-1"
            },
            "tags_all": {
              "Name": "Manoj-eks-private-subnet-1"
            },
            "vpc_id": "vpc-09fb0d1f9066fd2d2"
          },
          "dependencies": [
            "module.network.aws_vpc.infrastructure_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654340735:subnet/subnet-06fc6b183d9683f81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fc6b183d9683f81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654340735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Manoj-eks-private-subnet-2"
            },
            "tags_all": {
              "Name": "Manoj-eks-private-subnet-2"
            },
            "vpc_id": "vpc-09fb0d1f9066fd2d2"
          },
          "dependencies": [
            "module.network.aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654340735:subnet/subnet-0460d1c82d18ec81b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0460d1c82d18ec81b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654340735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Manoj-eks-public-subnet-1"
            },
            "tags_all": {
              "Name": "Manoj-eks-public-subnet-1"
            },
            "vpc_id": "vpc-09fb0d1f9066fd2d2"
          },
          "dependencies": [
            "module.network.aws_vpc.infrastructure_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654340735:subnet/subnet-0c2486a1b7c053856",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2486a1b7c053856",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654340735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Manoj-eks-public-subnet-2"
            },
            "tags_all": {
              "Name": "Manoj-eks-public-subnet-2"
            },
            "vpc_id": "vpc-09fb0d1f9066fd2d2"
          },
          "dependencies": [
            "module.network.aws_vpc.infrastructure_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654340735:subnet/subnet-0ada504b081101e19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ada504b081101e19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654340735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Manoj-eks-public-subnet-3"
            },
            "tags_all": {
              "Name": "Manoj-eks-public-subnet-3"
            },
            "vpc_id": "vpc-09fb0d1f9066fd2d2"
          },
          "dependencies": [
            "module.network.aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "infrastructure_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654340735:vpc/vpc-09fb0d1f9066fd2d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06983658cd639fc57",
            "default_route_table_id": "rtb-0cc029a19a97517f9",
            "default_security_group_id": "sg-0b74e9f8943c0cfaa",
            "dhcp_options_id": "dopt-044d37a34bdb35e11",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09fb0d1f9066fd2d2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cc029a19a97517f9",
            "owner_id": "654654340735",
            "tags": {
              "Name": "Manoj-eks-vpc"
            },
            "tags_all": {
              "Name": "Manoj-eks-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654340735:security-group/sg-027a3e91f1353375e",
            "description": "desc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027a3e91f1353375e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Manoj-eks-securitygroup",
            "name_prefix": "",
            "owner_id": "654654340735",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09fb0d1f9066fd2d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    }
  ]
}